--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -9,7 +9,7 @@
 var upgrades = {{ upgrades|safe }};
 var pilotCost = {{pilotCost|safe}};
 </script>
-	{{pilotCost}}
+	{{cards}}
   <ul class="nav nav-tabs" role="tablist" id="mytabs">
     <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Rebel</a></li>
     <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Empire</a></li>
