Adding basic upgrade functionality Added some basic functionality including upgrade selection/cost modification based on selections.

--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -8,6 +8,7 @@
 <script type='text/javascript'>
 var upgrades = {{ upgrades|safe }};
 var pilotCost = {{pilotCost|safe}};
+var upgradeCardList = {{cards|safe}};
 </script>
 	{{cards}}
   <ul class="nav nav-tabs" role="tablist" id="mytabs">
