--- a/squadbuilder/templates/squadbuilder/navbar.html
+++ b/squadbuilder/templates/squadbuilder/navbar.html
@@ -2,19 +2,25 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Home</a>
+      <a class="navbar-brand" href="/">Home</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="/blog/">Blog</a></li>
+        <li><a href="/contact/">Contact</a></li>
         
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">LoginStuff</a></li>
+	  {% if user.is_authenticated%}
+        <li><a href="#">Welcome {{ user.get_username }}!</a></li>
+		<li><a href="/logout/">Logout</a></li>
+	  {% else %}
+	  <li><a href="/register/">Register!</a></li>
+	  <li><a href="/login/">Login!</a></li>
+	  {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
