--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -11,6 +11,40 @@ var pilotCost = {{pilotCost|safe}};
 var upgradeCardList = {{cards|safe}};
 </script>
 
+<div class="panel panel-default">
+	<div class="panel-heading" role="tab" id="headingOne">
+	  <h4 class="panel-title">
+		<a role="button" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetest" aria-expanded="false" aria-controls="collapsetest">
+		  Select Expansions
+		</a>
+	  </h4>
+</div>
+<div id="collapsetest" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false">
+	{% for expansion in expansions %}
+	
+		<div class="list-group" style="position:relative">
+			<div class="btn-group" data-toggle="buttons">
+				<label >
+					<span style="float:left">{{expansion.name}}:</span>
+					<span class="form-group-sm" style="float:right">
+					  <select class="expansion-qty" id="{{expansion.id}}select">
+					    <option value="0">0</option>
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+					  </select>
+					</span>
+				</label>
+			</div>
+		</div>
+	
+	{% endfor %}
+	<button class="btn btn-primary btn-sm" type="submit" onclick="expansionListBuilder()">Update</button>
+</div>
+</div>
+
+
   <ul class="nav nav-tabs" role="tablist" id="mytabs">
     <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Rebel</a></li>
     <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Empire</a></li>
@@ -116,12 +150,6 @@ var upgradeCardList = {{cards|safe}};
 	</div>	
 </div>
 
-<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      Testing
-    </div>
-  </div>
-</div>
+
 {% endblock %}
 
