Adding data population scripts

--- a/squadbuilder/templates/squadbuilder/selector.html
+++ b/squadbuilder/templates/squadbuilder/selector.html
@@ -21,7 +21,7 @@
 				<label >
 					<span style="float:left">{{expansion.name}}:</span>
 					<span class="form-group-sm" style="float:right">
-					  <select class="expansion-qty" id="{{expansion.id}}select">
+					  <select class="expansion-qty" id="{{expansion.id}}select" name="{{expansion.id}}">
 					    <option value="0">0</option>
 						<option value="1">1</option>
 						<option value="2">2</option>
