--- a/squadbuilder/templates/squadbuilder/header.html
+++ b/squadbuilder/templates/squadbuilder/header.html
@@ -64,9 +64,18 @@
 		</div> 
 	</div>
 	<footer>
+	
+
 		<div class="container-fluid" style='margin-left:15px'>
 			<p><a href="#" target="blank">Contact</a> | <a href="#" target="blank">LinkedIn</a> | <a href="#" target="blank">Twitter</a> | <a href="#" target="blank">Google+</a></p>
 		</div>
+		
+		<div style='text-align:center;'><small>
+		This site is a fan site for the X-wing Miniatures Game and is not affiliated or endorsed by Lucasfilm Ltd. or Fantasy Flight Games.<br>
+		The Official Star Wars site can be found at www.starwars.com. The Official Fantasy Flight Games site can be found at www.fantasyflightgames.com.<br>
+		Star Wars, all names and pictures of Star Wars characters, vehicles, and any other Star Wars related items are registered trademarks 
+		and/or copyrights of Lucasfilm Ltd., or their respective trademark and copyright holders.
+		</small></div>
 	</footer>	
 
 		
