--- a/squadbuilder/templates/squadbuilder/navbar.html
+++ b/squadbuilder/templates/squadbuilder/navbar.html
@@ -15,7 +15,7 @@
 
       <ul class="nav navbar-nav navbar-right">
 	  {% if user.is_authenticated%}
-        <li><a href="#">Welcome {{ user.get_username }}!</a></li>
+        <li><a href="/profile/{{user.get_username}}/">Welcome {{ user.get_username }}!</a></li>
 		<li><a href="/logout/">Logout</a></li>
 	  {% else %}
 	  <li><a href="/register/">Register!</a></li>
