--- a/squadbuilder/templates/squadbuilder/header.html
+++ b/squadbuilder/templates/squadbuilder/header.html
@@ -30,7 +30,7 @@
 			  <div class="col-sm-10">
 				  <br>
 				  <center>
-				  <h3>Rob's X-Wing Site!</h3>
+				  <h3>X-wing Squad Share!</h3>
 				  </center>
 			  </div>
 		</div><hr>
