Home page layout tweaks

--- a/squadbuilder/templates/squadbuilder/header.html
+++ b/squadbuilder/templates/squadbuilder/header.html
@@ -66,9 +66,9 @@
 	<footer>
 	
 
-		<div class="container-fluid" style='margin-left:15px'>
+		<!--<div class="container-fluid" style='margin-left:15px'>
 			<p><a href="#" target="blank">Contact</a> | <a href="#" target="blank">LinkedIn</a> | <a href="#" target="blank">Twitter</a> | <a href="#" target="blank">Google+</a></p>
-		</div>
+		</div>-->
 		
 		<div style='text-align:center;'><small>
 		This site is a fan site for the X-wing Miniatures Game and is not affiliated or endorsed by Lucasfilm Ltd. or Fantasy Flight Games.<br>
