--- a/squadshare/templates/squadshare/home.html
+++ b/squadshare/templates/squadshare/home.html
@@ -8,7 +8,7 @@
 <p>Thanks for visiting Rob's X-wing Site! This site is currently under construction
 but we are hoping to be open for business soon!</p>
 
-{{recent_squads}}
+
 
 <div class="panel panel-info">
 	<div class="panel-heading">
@@ -30,7 +30,7 @@ but we are hoping to be open for business soon!</p>
 			<button type="button" class="btn btn-default">
 				<span class="glyphicon glyphicon-thumbs-up"> {{squad.upvotes}}</span>
 			</button>
-			<h4><a href="/squad/{{squad.id}}">{{squad.name}}</a></h4>
+			<h4 style="float:left;"><a href="/squad/{{squad.id}}">{{squad.name}}</a>&nbsp;&nbsp;&nbsp;</h4>
 			<h6>Created on: {{squad.createdDate}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;By: {{squad.user}}</h6>
 			<div>
 				{% for item in squad_list %}
