Home page layout updates

--- a/squadshare/templates/squadshare/home.html
+++ b/squadshare/templates/squadshare/home.html
@@ -15,13 +15,18 @@ but we are hoping to be open for business soon!</p>
 		<h3 class="panel-title">Recent Squads</h3>
 	</div>
 	<div class="panel-body">
+		<div class="container">
 		{% for squad in recent_squads %}
-			<button type="button" class="btn btn-default" name="squad{{squad.id}}" onclick="upvoteSquad({{squad.id}},name)">
-				<span class="glyphicon glyphicon-thumbs-up" name="squad{{squad.id}}"> {{squad.upvotes}}</span>
-			</button>
-			<h4 style="float:left;"><a href="/squad/{{squad.id}}">{{squad.name}}</a>&nbsp;&nbsp;&nbsp;</h4>
-			<h6>Created on: {{squad.createdDate}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;By: {{squad.user}}</h6>
-			<div>
+		
+			<div class ="row" style="border-bottom: 1px solid;">
+				<div class="col-sm-4">
+				<button type="button" class="btn btn-default" name="squad{{squad.id}}" onclick="upvoteSquad({{squad.id}},name)">
+					<span class="glyphicon glyphicon-thumbs-up" name="squad{{squad.id}}"> {{squad.upvotes}}</span>
+				</button>
+				<h4 style="float:left;"><a href="/squad/{{squad.id}}">{{squad.name}}</a>&nbsp;&nbsp;&nbsp;</h4>
+				<h6>Created on: {{squad.createdDate}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;By: {{squad.user}}</h6>
+				</div>
+			<div class="col-sm-8">
 				{% for item in squad_list %}
 				{% if item.name == squad.name %}
 					{% for pilot in item.list%}
@@ -34,23 +39,30 @@ but we are hoping to be open for business soon!</p>
 				{% endif %}
 				{% endfor %}
 			</div>
+			</div><br><br>
 			
 		{% endfor %}
+		</div>
 	</div>
 </div>
 
 <div class="panel panel-info">
 	<div class="panel-heading">
-		<h3 class="panel-title">Hot Squads</h3>
+		<h3 class="panel-title">Recent Squads</h3>
 	</div>
 	<div class="panel-body">
+		<div class="container">
 		{% for squad in hottest_squads %}
-			<button type="button" class="btn btn-default" name="squad{{squad.id}}" onclick="upvoteSquad({{squad.id}},name)">
-				<span class="glyphicon glyphicon-thumbs-up" name="squad{{squad.id}}"> {{squad.upvotes}}</span>
-			</button>
-			<h4 style="float:left;"><a href="/squad/{{squad.id}}">{{squad.name}}</a>&nbsp;&nbsp;&nbsp;</h4>
-			<h6>Created on: {{squad.createdDate}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;By: {{squad.user}}</h6>
-			<div>
+		
+			<div class ="row" style="border-bottom: 1px solid;">
+				<div class="col-sm-4">
+				<button type="button" class="btn btn-default" name="squad{{squad.id}}" onclick="upvoteSquad({{squad.id}},name)">
+					<span class="glyphicon glyphicon-thumbs-up" name="squad{{squad.id}}"> {{squad.upvotes}}</span>
+				</button>
+				<h4 style="float:left;"><a href="/squad/{{squad.id}}">{{squad.name}}</a>&nbsp;&nbsp;&nbsp;</h4>
+				<h6>Created on: {{squad.createdDate}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;By: {{squad.user}}</h6>
+				</div>
+			<div class="col-sm-8">
 				{% for item in hot_list %}
 				{% if item.name == squad.name %}
 					{% for pilot in item.list%}
@@ -63,8 +75,10 @@ but we are hoping to be open for business soon!</p>
 				{% endif %}
 				{% endfor %}
 			</div>
+			</div><br><br>
 			
 		{% endfor %}
+		</div>
 	</div>
 </div>
 {% endblock %}	
