--- a/squadshare/templates/squadshare/register.html
+++ b/squadshare/templates/squadshare/register.html
@@ -5,30 +5,26 @@
 <form method="POST">{% csrf_token %}
 	
 	<div class="input-group">
-		Username:
+		{{form.username.label}}:
 		{{form.username}}
 	</div>
 	<div class="input-group">
-		<br>Password:
+		<br>{{form.password1.label}}:
 		{{form.password1}}
 	</div>
 		<div class="input-group">
-		<br>Re-enter Password:
+		<br>
+		{{form.password2.label}}:
 		{{form.password2}}
+		<br><br>
+		{{form.password2.help_text}}
 	</div>
-	<!--<div class="input-group">
-		<br>Email:
-		<input type="email" name="email" class="form-control" placeholder="Email" aria-describedby="basic-addon1">
-	</div>
-	<div class="input-group">
-		<br>First Name:
-		<input type="text" name="first_name" class="form-control" placeholder="First Name" aria-describedby="basic-addon1">
-	</div>
-	<div class="input-group">
-		<br>Last Name:
-		<input type="text" name="last_name" class="form-control" placeholder="Last Name" aria-describedby="basic-addon1">
-	</div>
-	<br><button type="submit" class="btn btn-default">Submit</button>-->
+
+	<br>
 	<input type="submit" class="btn btn-default"/>
 </form>
+
+{% for line in help_text %}
+	<p>{{line}}</p>
+{% endfor %}
 {% endblock %}	
