--- a/squadshare/templates/squadshare/home.html
+++ b/squadshare/templates/squadshare/home.html
@@ -48,7 +48,7 @@ but we are hoping to be open for business soon!</p>
 
 <div class="panel panel-info">
 	<div class="panel-heading">
-		<h3 class="panel-title">Recent Squads</h3>
+		<h3 class="panel-title">Hot Squads</h3>
 	</div>
 	<div class="panel-body">
 		<div class="container">
