--- a/squadbuilder/templates/squadbuilder/header.html
+++ b/squadbuilder/templates/squadbuilder/header.html
@@ -24,7 +24,7 @@
 			  <div class="col-sm-2">
 				  <br>
 				  <center>
-					<img src="{% static 'img/profile.jpg' %}" class="responsive-img" style='max-height:100px;' alt="face">
+					<img src="{% static 'img/Xwinglogo.png'%}" class="responsive-img" style='max-height:100px;' alt="face">
 				  </center>
 			  </div>
 			  <div class="col-sm-10">
