Push master to prod

--- a/squadbuilder/templates/squadbuilder/header.html
+++ b/squadbuilder/templates/squadbuilder/header.html
@@ -23,7 +23,7 @@
 		<div class="row">
 			  <div class="col-sm-2">
 				  <br>
-				  <center>
+				  <center><!--comment-->
 					<img src="{% static 'img/Xwinglogo.png' %}" class="responsive-img" style='max-height:100px;' alt="face">
 				  </center>
 			  </div>
