--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -11,7 +11,7 @@ var pilotCost = {{pilotCost|safe}};
 var upgradeCardList = {{cards|safe}};
 </script>
 
-
+{{cards}}
 
   <ul class="nav nav-tabs" role="tablist" id="mytabs">
     <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Rebel</a></li>
