--- a/squadbuilder/templates/squadbuilder/header.html
+++ b/squadbuilder/templates/squadbuilder/header.html
@@ -23,14 +23,8 @@
 		<div class="row">
 			  <div class="col-sm-2">
 				  <br>
-				  <center>
+				  <center><!--comment-->
 					<img src="{% static 'img/Xwinglogo.png' %}" class="responsive-img" style='max-height:100px;' alt="face">
-				  </center>
-			  </div>
-			  <div class="col-sm-10">
-				  <br>
-				  <center>
-				  <h3>X-wing Squad Share!</h3>
 				  </center>
 			  </div>
 		</div><hr>
