--- a/squadshare/templates/squadshare/home.html
+++ b/squadshare/templates/squadshare/home.html
@@ -5,14 +5,14 @@
 
 <h4>Hey, welcome to the site!</h4>
 
-<p>Thanks for visiting Rob's X-wing Site! This site is currently under construction
-but we are hoping to be open for business soon!</p>
+<p>Thanks for visiting X-wing Squad Share! This site is currently under construction
+but we are hoping to be open for business soon! Be sure to check back for updates!</p>
 
 
 
 <div class="panel panel-info">
 	<div class="panel-heading">
-		<h3 class="panel-title">Recent Squads</h3>
+		<h3 class="panel-title">Recently Created Squads</h3>
 	</div>
 	<div class="panel-body">
 		<div class="container">
@@ -32,7 +32,7 @@ but we are hoping to be open for business soon!</p>
 					{% for pilot in item.list%}
 					<p><strong>{{pilot.0}}</strong>
 						{% for upgrade in pilot.1 %}
-							-{{upgrade}}
+							+<span style="color:#a3297a"> {{upgrade}}</span>
 						{% endfor %}
 					</p>
 					{% endfor %}
@@ -48,7 +48,7 @@ but we are hoping to be open for business soon!</p>
 
 <div class="panel panel-info">
 	<div class="panel-heading">
-		<h3 class="panel-title">Hot Squads</h3>
+		<h3 class="panel-title">Popular Squads</h3>
 	</div>
 	<div class="panel-body">
 		<div class="container">
@@ -68,7 +68,7 @@ but we are hoping to be open for business soon!</p>
 					{% for pilot in item.list%}
 					<p><strong>{{pilot.0}}</strong>
 						{% for upgrade in pilot.1 %}
-							-{{upgrade}}
+							+<span style="color:#a3297a"> {{upgrade}}</span>
 						{% endfor %}
 					</p>
 					{% endfor %}
