Bug Fix: Salvaged Astromechs functionality fixed

--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -11,7 +11,7 @@ var pilotCost = {{pilotCost|safe}};
 var upgradeCardList = {{cards|safe}};
 </script>
 
-{{upgrades}}
+{{cards}}
 
 
   <ul class="nav nav-tabs" role="tablist" id="mytabs">
