Clean up of expansion select screen Bug Fix: eliminated dependency of expansion position in selection

--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -10,7 +10,7 @@ var upgrades = {{ upgrades|safe }};
 var pilotCost = {{pilotCost|safe}};
 var upgradeCardList = {{cards|safe}};
 </script>
-
+{{test}}
 
   <ul class="nav nav-tabs" role="tablist" id="mytabs">
     <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Rebel</a></li>
