Adding functionality for multiple expansions Allow for ship/pilot qty to be determined by expansion qty

--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -5,6 +5,8 @@
 
 {% block content %}
 
+{{pilots}}
+
 <script type='text/javascript'>
 var upgrades = {{ upgrades|safe }};
 var pilotCost = {{pilotCost|safe}};
