Feature: Quantity control in builder

--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -5,11 +5,12 @@
 
 {% block content %}
 
-
 <script type='text/javascript'>
 var upgrades = {{ upgrades|safe }};
 var pilotCost = {{pilotCost|safe}};
 var upgradeCardList = {{cards|safe}};
+var available_ships = {{available_ships|safe}};
+var available_pilots = {{available_pilots|safe}};
 </script>
 
   <ul class="nav nav-tabs" role="tablist" id="mytabs">
