Some basic button creation on builder

--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -40,7 +40,8 @@ var available_pilots = {{available_pilots|safe}};
 				<div class="list-group">
 					<div class="btn-group" data-toggle="buttons">
 						<label >
-							<input class="pilotCheckbox" type="checkbox" id="{{pilot.id}}" name="p{{pilot.code}}" aria-label="...">{{pilot.name}}-{{pilot.cost}}</input>
+							<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>{{pilot.name}}-{{pilot.cost}}</button>
+							<!--<input class="pilotCheckbox" type="checkbox" id="{{pilot.id}}" name="p{{pilot.code}}" aria-label="...">{{pilot.name}}-{{pilot.cost}}</input>-->
 						</label>
 					</div>
 				</div>
