New builder complete. Multiple copies of same pilot can now be added

--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -40,8 +40,7 @@ var available_pilots = {{available_pilots|safe}};
 				<div class="list-group">
 					<div class="btn-group" data-toggle="buttons">
 						<label >
-							<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>{{pilot.name}}-{{pilot.cost}}</button>
-							<!--<input class="pilotCheckbox" type="checkbox" id="{{pilot.id}}" name="p{{pilot.code}}" aria-label="...">{{pilot.name}}-{{pilot.cost}}</input>-->
+							<button type="pilotbutton" class="btn btn-default" id="{{pilot.id}}" name="p{{pilot.code}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>{{pilot.name}}-{{pilot.cost}}</button>
 						</label>
 					</div>
 				</div>
@@ -72,7 +71,7 @@ var available_pilots = {{available_pilots|safe}};
 				<div class="list-group">
 					<div class="btn-group" data-toggle="buttons">
 						<label >
-							<input class="pilotCheckbox" type="checkbox" id="{{pilot.id}}" name="p{{pilot.code}}" aria-label="...">{{pilot.name}}-{{pilot.cost}}</input>
+						<button type="pilotbutton" class="btn btn-default" id="{{pilot.id}}" name="p{{pilot.code}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>{{pilot.name}}-{{pilot.cost}}</button>
 						</label>
 					</div>
 				</div>
@@ -103,7 +102,7 @@ var available_pilots = {{available_pilots|safe}};
 				<div class="list-group">
 					<div class="btn-group" data-toggle="buttons">
 						<label >
-							<input class="pilotCheckbox" type="checkbox" id="{{pilot.id}}" name="p{{pilot.code}}"  aria-label="...">{{pilot.name}}-{{pilot.cost}}</input>
+						<button type="pilotbutton" class="btn btn-default" id="{{pilot.id}}" name="p{{pilot.code}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>{{pilot.name}}-{{pilot.cost}}</button>
 						</label>
 					</div>
 				</div>
@@ -137,10 +136,7 @@ var available_pilots = {{available_pilots|safe}};
 		{% if user.is_authenticated %}
 		<form method="POST">{% csrf_token %}
 		<div id="savedialog">
-			<!--<input type="hidden" name="squadcode" value="">
-			<br><h4>Enter Squad Name:</h4>
-			<input type="text" class="form-control" name="squadname" placeholder="Squad Name" aria-describedby="basic-addon1"><br>
-			<center><button id="finalsave" type="submit" class="btn btn-success">Save Squad</button></center>-->
+
 		</div>
 		</form>
 		{% else %}
