--- a/squadbuilder/templates/squadbuilder/navbar.html
+++ b/squadbuilder/templates/squadbuilder/navbar.html
@@ -6,10 +6,11 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    
       <ul class="nav navbar-nav">
         <li><a href="/blog/">Blog</a></li>
         <li><a href="/contact/">Contact</a></li>
+		<li><a href="/squadbuilder/">Squad Builder</a></li>
         
       </ul>
 
@@ -22,6 +23,6 @@
 	  <li><a href="/login/">Login!</a></li>
 	  {% endif %}
       </ul>
-    </div><!-- /.navbar-collapse -->
+
   </div><!-- /.container-fluid -->
 </nav>
