--- a/squadshare/templates/squadshare/home.html
+++ b/squadshare/templates/squadshare/home.html
@@ -15,7 +15,7 @@ but we are hoping to be open for business soon! Be sure to check back for update
 		<h3 class="panel-title">Recently Created Squads</h3>
 	</div>
 	<div class="panel-body">
-		<div class="container">
+		<div class="container-fluid">
 		{% for squad in recent_squads %}
 		
 			<div class ="row" style="border-bottom: 1px solid;">
@@ -51,7 +51,7 @@ but we are hoping to be open for business soon! Be sure to check back for update
 		<h3 class="panel-title">Popular Squads</h3>
 	</div>
 	<div class="panel-body">
-		<div class="container">
+		<div class="container-fluid">
 		{% for squad in hottest_squads %}
 		
 			<div class ="row" style="border-bottom: 1px solid;">
