--- a/squadshare/templates/squadshare/squad.html
+++ b/squadshare/templates/squadshare/squad.html
@@ -3,10 +3,10 @@
 
 {% block content %}
 
-
+	{{squad}}
 	<div class="panel panel-info">
 		<div class="panel-heading">
-			<h3 class="panel-title">{{squad.0.name}}</h3>
+			<h3 class="panel-title">{{squad.0.name}}  ({{squad.0.cost}}/100)  Created By: <a href="/profile/{{squad.0.creator}}">{{squad.0.creator}}</a></h3>
 		</div>
 		<div class="panel-body">
 		{% for squad in squad %}
@@ -28,13 +28,13 @@
 	{% for comment in comments %}
 		<div class="panel panel-default">
 			<h4>{{comment.comment}}</h4>
-			<p> by:{{comment.user}} on:{{comment.commentDate}}</p>
+			<p> by:<a href="/profile/{{comment.user}}">{{comment.user}}</a> on:{{comment.commentDate}}</p>
 		</div>
 	{% endfor %}
 	
 	{% if user.is_authenticated%}
 	<form method="POST">{% csrf_token %}
-		<textarea rows="5" cols="50" name="comment">Enter a comment...</textarea><br>
+		<textarea rows="5" cols="50" name="comment" placeholder="Enter a comment"></textarea><br>
 		<input type="hidden" name="squadcode" value="{{squad.0.squadcode}}">
 	<button class="btn btn-primary btn-sm" type="submit">Submit Comment</button>
 	</form>
